fix scale ratio on mobile devides

--- a/src/css/content_scale.css
+++ b/src/css/content_scale.css
@@ -36,6 +36,6 @@
     .box.scale-ratio-ratio--4 {  width:    16.66666666%;  }
     .box.scale-ratio-ratio--3 {  width:    20%;           }
     .box.scale-ratio-ratio--2 {  width:    25%;           }
-    .box.scale-ratio-ratio--1 {  width:    50%;           }
+    .box.scale-ratio-ratio--1 {  width:    33.33333333%;  }
     .box.scale-ratio-ratio-1  {  width:    100%;          }
 }
